Upgrades to spark 4.0.1